# bonobo-client

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
client/: client.cpp  client.h
clients/: client.cpp  client.h  client.hh
clients/actuator/: actuator.cpp  actuator.h  actuator.hh
clients/referee/: referee.cpp  referee.h
clients/replacer/: replacer.h
clients/vision/: vision.h
entities/actuator/: actuator.h
entities/coach/: coach.cpp  coach.h
entities/playbooks/: defensive_playbook.cpp  defensive_playbook.h  offensive_playbook.cpp  offensive_playbook.h  playbook.cpp  playbook.h
entities/player/: player.cpp  player.h
entities/player/behaviors/: attack_with_ball_behavior.cpp  attack_with_ball_behavior.h  behavior.h  block_attack_behavior.cpp  block_attack_behavior.h  defend_goal_behavior.cpp  defend_goal_behavior.h
entities/player/roles/: attacker_role.cpp  attacker_role.h  defender_role.cpp  defender_role.h  goalkeeper_role.cpp  goalkeeper_role.h  role.cpp  role.h
entities/player/skills/: skill_escape.cpp  skill_escape.h  skill_goTo.cpp  skill_goTo.h  skill_manager.h  skill_rotateTo.cpp  skill_rotateTo.h  skill_strategy.h  skill_wall_spin.cpp  skill_wall_spin.h  skills.cpp  skills.h  univector.cpp  univector.h
entities/player/skills/rrt/: RRTCollision.cpp  RRTCollision.h  RRTCore.cpp  RRTCore.h  RRTOptimization.cpp  RRTOptimization.h  RRTPathExecution.cpp  RRTPathExecution.h  skill_rrt.cpp  skill_rrt.h
entities/referee/: referee.h
entities/replacer/: replacer.cpp  replacer.h
entities/strategy/: strategy.cpp  strategy.h
entities/vision/: vision.cpp  vision.h
entities/worldmap/: worldmap.cpp  worldmap.h
proto/: command.pb.cc  command.pb.h  common.pb.cc  common.pb.h  packet.pb.cc  packet.pb.h  replacement.pb.cc  replacement.pb.h
utils/basics/: basic.cpp  basic.h
utils/timer/: timer.cpp  timer.h
